--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,12 @@
     "require": {},
     "require-dev": {
         "illuminate/support": "^7.10",
-        "symfony/var-dumper": "^5.0"
+        "symfony/var-dumper": "^5.0",
+        "phpunit/phpunit": "^9.1"
+    },
+    "autoload": {
+        "files": [
+            "src/methods.php"
+        ]
     }
 }
