--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "banqhsia@msn.com"
         }
     ],
-    "require": {},
+    "require": {
+        "divineomega/array_undot": "^4.1"
+    },
     "require-dev": {
         "illuminate/support": "^7.10",
         "symfony/var-dumper": "^5.0",
